# CentroidalControlCollection

./: .clang-format-common.sh  CMakeLists.txt  README.md  _config.yml  index.html  package.xml  robots.txt
.github/workflows/: ci-catkin.yaml  ci-colcon.yaml  ci-standalone.yaml  ci.yaml  package.yaml
_layouts/: default.html
cmake/: Config.cmake.in
debian/: changelog  control  copyright  rules
doc/: CMakeLists.txt  Doxyfile.in
doxygen/: CommonModels_8h.html  CommonModels_8h__dep__incl.map  CommonModels_8h__dep__incl.md5  CommonModels_8h__incl.map  CommonModels_8h__incl.md5  CommonModels_8h_source.html  Constants_8h.html  Constants_8h__dep__incl.map  Constants_8h__dep__incl.md5  Constants_8h_source.html  DcmTracking_8h.html  DcmTracking_8h__incl.map  DcmTracking_8h__incl.md5  DcmTracking_8h_source.html  DdpCentroidal_8h.html  DdpCentroidal_8h__incl.map  DdpCentroidal_8h__incl.md5  DdpCentroidal_8h_source.html  DdpSingleRigidBody_8h.html  DdpSingleRigidBody_8h__incl.map  DdpSingleRigidBody_8h__incl.md5  DdpSingleRigidBody_8h_source.html  DdpZmp_8h.html  DdpZmp_8h__incl.map  DdpZmp_8h__incl.md5  DdpZmp_8h_source.html  EigenTypes_8h.html  EigenTypes_8h__dep__incl.map  EigenTypes_8h__dep__incl.md5  EigenTypes_8h__incl.map  EigenTypes_8h__incl.md5  EigenTypes_8h_source.html  FootGuidedControl_8h.html  FootGuidedControl_8h__incl.map  FootGuidedControl_8h__incl.md5  FootGuidedControl_8h_source.html  IntrinsicallyStableMpc_8h.html  IntrinsicallyStableMpc_8h__incl.map  IntrinsicallyStableMpc_8h__incl.md5  IntrinsicallyStableMpc_8h_source.html  (+528 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  files_0.js  (+63 more)
include/CCC/: CommonModels.h  DcmTracking.h  DdpCentroidal.h  DdpSingleRigidBody.h  DdpZmp.h  FootGuidedControl.h  IntrinsicallyStableMpc.h  InvariantSequentialExtension.h  LinearMpcXY.h  LinearMpcZ.h  LinearMpcZmp.h  PreviewControl.h  PreviewControlCentroidal.h  PreviewControlZmp.h  QpZmp.h  SingularPreviewControlZmp.h  StateSpaceModel.h  StepMpc.h  VariantSequentialExtension.h  console.h  streams.h
include/centroidal_control_collection/: StateSpaceModel.h
samples/: CMakeLists.txt
samples/src/: PlanJumpingMotion.cpp  SampleJumpingMotion.cpp
src/: CMakeLists.txt  CommonModels.cpp  DcmTracking.cpp  DdpCentroidal.cpp  DdpSingleRigidBody.cpp  DdpZmp.cpp  EigenTypes.h  FootGuidedControl.cpp  IntrinsicallyStableMpc.cpp  LinearMpcXY.cpp  LinearMpcZ.cpp  LinearMpcZmp.cpp  PreviewControlCentroidal.cpp  PreviewControlZmp.cpp  QpZmp.cpp  SequentialExtendedModelVariant.h  SingularPreviewControlZmp.cpp  StateSpaceModel.h  StepMpc.cpp
src/CCC/: CMakeLists.txt  Constants.h  EigenTypes.h  LinearMpcTZ.cpp  LinearMpcTZ.h  LinearMpcXY.h  LinearMpcZ.h  MotionData.h  SequentialExtendedModelVariant.h  StateSpaceModel.h  VariantSequentialExtension.h
tests/: CMakeLists.txt
tests/scripts/: plotTestZmpBasedMethodResults.py  simSingleRigidBody.py
tests/src/: ContactManager.h  FootstepManager.h  SimModels.h  TestDcmTracking.cpp  TestDdpCentroidal.cpp  TestDdpSingleRigidBody.cpp  TestDdpZmp.cpp  TestFootGuidedControl.cpp  TestIntrinsicallyStableMpc.cpp  TestInvariantSequentialExtension.cpp  TestLinearMpcTZ.cpp  TestLinearMpcXY.cpp  TestLinearMpcZ.cpp  TestLinearMpcZmp.cpp  TestPreviewControl.cpp  TestPreviewControlCentroidal.cpp  TestPreviewControlZmp.cpp  TestSimDdpSingleRigidBody.cpp  TestSingularPreviewControlZmp.cpp  TestStateSpaceModel.cpp  TestStepMpc.cpp  TestVariantSequentialExtension.cpp  testStateSpaceModel.cpp  testVariantSequentialExtension.cpp
tests/test/: TestSimDdpSingleRigidBody.test
